--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -12,13 +12,93 @@
 .header__navbar-list {
     list-style: none;
     padding-left: 0;
-    margin-top: 4px 0 0 0;
+    margin-top: 8px;
+    display: flex;
+    align-items: center;
 }
 
 .header__navbar-item {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     margin: 0 8px;
     position: relative;
+}
+
+.header__navbar-item-link {
+    padding-left: 2px;
+}
+
+.header__navbar-user {
+    position: relative;
+    cursor: pointer;
+}
+
+.header__navbar-user-avatar {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid var(--border-color);
+}
+
+.header__navbar-user-menu::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 10px;
+    left: 0;
+    top: -10px;
+}
+
+.header__navbar-user-menu::before {
+    position: absolute;
+    right: 12%;
+    bottom: 100%;
+    content: "";
+    border-style: solid;
+    border-width: 10px 20px;
+    border-color: transparent transparent var(--white-color) transparent;
+    z-index: 0;
+}
+
+.header__navbar-user-menu {
+    display: none;
+    position: absolute;
+    padding-left: 0;
+    padding-top: 4px;
+    top: calc(100% + 10px);
+    right: 0;
+    background: var(--white-color);
+    box-shadow: 0 0 3px #ddd;
+    border-radius: 2px;
+    width: 150px;
+    list-style: none;
+    z-index: 1;
+    cursor: default;
+}
+
+.header__navbar-user-menu-item:hover {
+    background-color: #eee;
+}
+
+.header__navbar-user:hover .header__navbar-user-menu {
+    display: block;
+    animation: fadeIn ease 0.3s, growUp ease 0.3s;
+    --grow-from: 70%;
+    --grown-to: 100%;
+    transform-origin: 80% 0;
+}
+
+.header__navbar-user-menu-item:last-child {
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.header__navbar-user-menu-item a {
+    display: block;
+    text-decoration: none;
+    color: var(--text-color);
+    padding: 6px 12px;
 }
 
 .header__navbar-item,
@@ -127,11 +207,11 @@
 
 .header__notify::before {
     position: absolute;
-    right: 0;
-    top: -30px;
+    right: 12px;
+    bottom: 100%;
     content: "";
     border-style: solid;
-    border-width: 20px 30px;
+    border-width: 10px 20px;
     border-color: transparent transparent var(--white-color) transparent;
 }
 
@@ -383,14 +463,92 @@
 }
 
 .header__cart {
-    width: 144px;
+    width: 88px;
+    height: 40px;
+    margin: 0 28px;
     text-align: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .header__cart-icon {
     color: var(--white-color);
     font-size: 2.4rem;
-    margin-top: 4px;
+    line-height: 100%;
+}
+
+.header__cart-quantity {
+    position: absolute;
+    top: -4px;
+    right: 22px;
+    padding: 1px 6px;
+    border-radius: 10px;
+    border: 2px solid var(--primary-color);
+    background-color: var(--white-color);
+    color: var(--primary-color);
+    font-size: 1.4rem;
+}
+
+.header__cart-list {
+    cursor: default;
+    display: none;
+    position: absolute;
+    min-height: 40px;
+    top: calc(100% + 4px);
+    right: 0;
+    width: 400px;
+    background-color: var(--white-color);
+    box-shadow: 0 0 3px #ddd;
+}
+
+.header__cart-list::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    top: -4px;
+}
+
+.header__cart-list::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 100%;
+    right: 22px;
+    border-style: solid;
+    border-width: 10px 20px;
+    border-color: transparent transparent var(--white-color) transparent;
+    cursor: pointer;
+}
+
+.header__cart:hover .header__cart-list {
+    display: block;
+    animation: fadeIn ease 0.3s, growUp ease 0.3s;
+    --grow-from: 70%;
+    --grow-to: 100%;
+    transform-origin: 90% 0;
+}
+
+.header__cart-empty-cart-img {
+    display: none;
+    width: 50%;
+}
+
+.header__cart-empty-cart-text {
+    display: none;
+    font-size: 1.5rem;
+    color: var(--text-color);
+}
+
+.header__cart-list--empty .header__cart-empty-cart-img,
+.header__cart-list--empty .header__cart-empty-cart-text {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .header__search {
@@ -418,6 +576,7 @@
 
 .header__search-input:focus ~ .header__search-history {
     display: block;
+    animation: fadeIn ease 0.3s;
 }
 
 .header__search-history {
@@ -492,6 +651,7 @@
 
 .header__search-selection:hover .header__search-option {
     display: block;
+    animation: fadeIn ease 0.3s;
 }
 
 .header__search-option::before {
@@ -542,4 +702,99 @@
 
 .header__search-option-item-selected i {
     display: inline-block;
+}
+
+.header__cart-list-item {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.header__cart-heading {
+    text-align: left;
+    margin: 8px 0 8px 12px;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    font-weight: 400;
+}
+
+.header__cart-item {
+    display: flex;
+}
+
+.header__cart-item:hover {
+    background-color: rgb(245, 245, 245);
+}
+
+.header__cart-img {
+    width: 44px;
+    height: 42px;
+    margin: 12px;
+    border: 1px solid var(--border-color);
+}
+
+.header__cart-item-info {
+    width: 100%;
+}
+
+.header__cart-item-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 12px;
+}
+
+.header__cart-item-name {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+    margin: 8px 0;
+}
+
+.header__cart-item-price-wrap {
+}
+
+.header__cart-item-price {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--primary-color);
+}
+
+.header__cart-item-multiply {
+    color: var(--text-color);
+    font-size: 0.9rem;
+    margin: 0 4px;
+}
+
+.header__cart-item-quantity {
+    color: var(--text-color);
+    font-size: 1.2rem;
+}
+
+.header__cart-item-body {
+    display: flex;
+    justify-content: space-between;
+    margin: 8px 12px 8px 0;
+}
+
+.header__cart-item-description {
+    color: var(--text-color);
+    font-size: 1.3rem;
+    font-weight: 300;
+}
+
+.header__cart-item-remove {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    font-weight: 300;
+}
+
+.header__cart-item-remove:hover {
+    color: var(--primary-color);
+    cursor: pointer;
+}
+
+.header__cart-show-item {
+    float: right;
+    margin: 12px;
 }
