--- a/assests/css/base.css
+++ b/assests/css/base.css
@@ -27,6 +27,7 @@ html {
     box-sizing: border-box;
 }
 
+/* Responsive */
 .grid {
     width: 1200px;
     max-width: 100%;
@@ -41,6 +42,8 @@ html {
     display: flex;
     flex-wrap: wrap;
 }
+
+.grid__column
 
 .modal {
     position: fixed;
