--- a/assests/css/base.css
+++ b/assests/css/base.css
@@ -6,12 +6,16 @@
     --primary-color: #fa5330;
     --primary-color-pale: rgba(250, 82, 48, 0.3);
     --border-color: #dbdbdb;
+    --container-background: #f5f5f5;
+    --home-filter-background: #ebebeb;
 
     --header-height: 120px;
     --navbar-height: 40px;
     --header-with-search-height: calc(
         var(--header-height) - var(--navbar-height)
     );
+
+    --column-unit: calc(100% / 12);
 }
 
 * {
@@ -41,9 +45,25 @@ html {
 .grid__row {
     display: flex;
     flex-wrap: wrap;
+    margin-left: -12px;
+    margin-right: -12px;
 }
 
-.grid__column
+.grid__column-2 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: calc(var(--column-unit) * 2);
+}
+
+.grid__column-10 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: calc(var(--column-unit) * 10);
+}
+
+.padding-top {
+    padding-top: 24px;
+}
 
 .modal {
     position: fixed;
@@ -82,7 +102,7 @@ html {
     border-radius: 2px;
     font-size: 1.5rem;
     cursor: pointer;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     line-height: 1.6rem;
@@ -120,10 +140,10 @@ html {
 
 @keyframes slideDown {
     from {
-        top: 100%;
+        transform: translateY(-10px);
     }
     to {
-        top: calc(100% + 10px);
+        transform: translateY(0px);
     }
 }
 
@@ -134,4 +154,16 @@ html {
     to {
         transform: scale(var(--grow-to));
     }
+}
+
+/* selection */
+.select-input {
+    min-width: 120px;
+    height: 34px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
 }
