--- a/assests/css/main.css
+++ b/assests/css/main.css
@@ -444,8 +444,12 @@
     border-left: 2px solid var(--border-color);
     margin: 0 8px;
 }
-.modal,
-.sign-up-modal,
+.modal {
+    display: none;
+}
+.sign-up-modal {
+    display: none;
+}
 .sign-in-modal {
     display: none;
 }
@@ -808,4 +812,184 @@
 .header__cart-show-item {
     float: right;
     margin: 12px;
+}
+
+/* wrapper__container */
+.wrapper__container {
+    background-color: var(--container-background);
+}
+
+.category {
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+
+.category__heading {
+    font-size: 1.6rem;
+    color: var(--text-color);
+    margin: 0;
+    padding: 12px 16px;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.category__heading-icon {
+    font-size: 1.4rem;
+    margin-right: 4px;
+    position: relative;
+    top: -1px;
+}
+
+.category-list {
+    padding-left: 0;
+    list-style: none;
+    padding-bottom: 16px;
+    margin-left: 14px;
+}
+
+.category-item {
+}
+.category-item--active .category-item__link {
+    color: var(--primary-color);
+}
+
+.category-item--active .category-item__link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(calc(-50% - 1px));
+    left: 4px;
+    border: 4px solid;
+    border-color: transparent transparent transparent var(--primary-color);
+}
+
+.category-item__link {
+    position: relative;
+    display: block;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 12px 16px;
+    right: 0;
+    transition: linear 0.1s;
+}
+.category-item__link:hover {
+    color: var(--primary-color);
+    right: -4px;
+}
+
+/* filter */
+.home-filter {
+    display: flex;
+    align-items: center;
+    background-color: var(--home-filter-background);
+    padding: 12px 24px;
+    border-radius: 2px;
+}
+
+.home-filter__label {
+    color: var(--text-color);
+    font-size: 1.4rem;
+    margin-right: 12px;
+}
+
+.home-filter__btn {
+    min-width: 90px;
+    margin-right: 8px;
+}
+
+.select-input {
+    font-size: 1.4rem;
+    min-width: 200px;
+    position: relative;
+}
+
+.select-input:hover .select-input__list {
+    display: block;
+    animation: fadeIn ease 0.3s, slideDown ease 0.3s;
+}
+
+.select-input__list {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    margin-top: 4px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 4px 0 0 0;
+    list-style: none;
+}
+
+.select-input__item a {
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.select-input__item a:last-child {
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.select-input__item a:hover {
+    color: var(--primary-color);
+}
+
+.select-input__list::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: 100%;
+}
+
+.home-filter__page {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    font-size: 1.4rem;
+}
+
+.home-filter__page-number {
+    margin: 0 8px;
+    color: var(--text-color);
+}
+
+.home-filter__page-current {
+    color: var(--primary-color);
+}
+
+.home-filter__page-control {
+    display: flex;
+    border-radius: 2px;
+    overflow: hidden;
+}
+
+.home-filter-page-btn {
+    display: flex;
+    width: 36px;
+    height: 36px;
+    background-color: var(--white-color);
+    color: var(--text-color);
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-filter-page-btn:first-child {
+    border-right: 1px solid var(--border-color);
+}
+
+.home-filter-page-btn:hover {
+    background-color: rgb(245, 245, 245);
+}
+
+.home-filter-page-btn--disabled,
+.home-filter-page-btn--disabled:hover {
+    background-color: #f9f9f9;
+    color: var(--text-pale);
+    cursor: default;
 }
