--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,6 +14,7 @@
     --header-with-search-height: calc(
         var(--header-height) - var(--navbar-height)
     );
+    --header-sort-bar-height: 46px;
 
     --column-unit: calc(100% / 12);
 }
@@ -32,16 +33,6 @@ html {
 }
 
 /* Responsive */
-.grid {
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-.grid__full-width {
-    width: 100%;
-}
-
 .grid__row {
     display: flex;
     flex-wrap: wrap;
@@ -65,10 +56,6 @@ html {
     padding-left: 5px;
     padding-right: 5px;
     width: calc(var(--column-unit) * 10);
-}
-
-.padding-top {
-    padding-top: 24px;
 }
 
 .modal {
