--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+.wrapper {
+    overflow: hidden;
+}
+
 .header {
     height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f53e2c);
@@ -461,6 +465,15 @@
     align-items: center;
 }
 
+.header__mobile-search {
+    display: none;
+}
+
+.header__mobile-search-icon {
+    font-size: 2.6rem;
+    color: var(--white-color);
+}
+
 .header__logo {
     width: 200px;
     padding-left: 8px;
@@ -488,6 +501,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__cart-icon {
@@ -519,15 +533,6 @@
     background-color: var(--white-color);
     box-shadow: 0 0 3px #ddd;
     z-index: 1;
-}
-
-.header__cart-list::before {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 4px;
-    width: 100%;
-    top: -4px;
 }
 
 .header__cart-list::after {
@@ -827,6 +832,55 @@
     margin: 12px;
 }
 
+/* header sort bar */
+.header__sort-bar {
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: var(--header-sort-bar-height);
+    background-color: var(--white-color);
+    display: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.header__sort-item {
+    flex: 1;
+}
+
+.header__sort-link {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    display: block;
+    height: 100%;
+    line-height: var(--header-sort-bar-height);
+    text-align: center;
+    position: relative;
+}
+
+.header__sort-link::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    height: 60%;
+    border-left: 1px solid #e5e5e5;
+}
+
+.header__sort-item:first-child .header__sort-link::before {
+    display: none;
+}
+
+.header__sort-link--active {
+    color: var(--primary-color);
+}
+
 /* wrapper__container */
 .wrapper__container {
     background-color: var(--container-background);
@@ -899,6 +953,63 @@
 .category-item__link:hover {
     color: var(--primary-color);
     right: -4px;
+}
+
+/* mobile category */
+.mobile-category {
+}
+
+.mobile-category__list {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    max-width: 100%;
+    overflow: auto;
+}
+
+.mobile-category__list::-webkit-scrollbar {
+    display: none;
+}
+
+.mobile-category__item {
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+
+.mobile-category__item:nth-of-type(3n + 1) .mobile-category__link {
+    background-color: #87afd8;
+}
+
+.mobile-category__item:nth-of-type(3n + 2) .mobile-category__link {
+    background-color: #76c9bd;
+}
+
+.mobile-category__item:nth-of-type(3n) .mobile-category__link {
+    background-color: #88cf81;
+}
+
+.mobile-category__link {
+    --line-height: 2rem;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: var(--white-color);
+    display: block;
+    max-width: 120px;
+    min-width: 50px;
+    height: calc(var(--line-height) * 2);
+    line-height: var(--line-height);
+    text-align: center;
+    border-radius: 4px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    padding: 0 4px;
 }
 
 /* filter */
@@ -1210,6 +1321,7 @@
 
 .pagination-home-product {
     margin: 40px 0;
+    padding-left: 0;
 }
 
 .footer__heading {
@@ -1263,17 +1375,11 @@
     width: 100%;
 }
 
-.footer__copyright::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 10%;
-    right: 10%;
-    border-top: 1px solid var(--border-color);
+.footer__copyright {
+    background-color: var(--container-background);
 }
 
-.footer__copyright {
+.footer__copyright-text {
     position: relative;
     width: 100%;
     text-align: center;
